Updated refreshtoken function
