# docs/swagger.json
@@ -119,6 +119,63 @@
                     }
                 }
             }
+        },
+        "/api/auth/refreshToken": {
+            "post": {
+                "summary": "Refresh JWT Token.",
+                "description": "Rota responsável pelo refresh do JWT Token.",
+                "tags": [
+                    "usuario"
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "refreshToken": {
+                                        "type": "string"
+                                    }
+                                }
+                            },
+                            "examples": {
+                                "usuario": {
+                                    "value": {
+                                        "refreshToken": "cb986898-bd91-4251-809f-1b37fa91e8ae"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "type": "object",
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "accessToken": {
+                                            "type": "string"
+                                        },
+                                        "refreshToken": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "RefreshToken é requerido!"
+                    },
+                    "404": {
+                        "description": "RefreshToken não encontrado!"
+                    }
+                }
+            }
         }
     },
     "components": {
